terraform/backend/alb.tf
resource "aws_lb" "lb" {
  name               = "${var.cluster_name}-${var.environment}-alb"
  load_balancer_type = "application"
  internal           = false
  security_groups    = [aws_security_group.lb_sg.id]
  subnets            = var.subnets
}

resource "aws_lb_listener" "redirecter" {
  load_balancer_arn = aws_lb.lb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_alb_listener" "https_listener" {
  load_balancer_arn = aws_lb.lb.id
  port              = "443"
  protocol          = "HTTPS"
  depends_on        = [aws_alb_target_group.default-tg]
  certificate_arn   = aws_acm_certificate.cert.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.default-tg.arn
  }
}

resource "aws_alb_target_group" "default-tg" {
  name     = "${var.cluster_name}-${var.environment}-tg"
  port     = 443
  protocol = "HTTP"
  vpc_id   = var.vpc_id

  health_check {
    path                = var.default_health_check_path
    port                = "traffic-port"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 2
    interval            = 5
    matcher             = "200"
  }
}
