terraform/backend/service.tf
resource "aws_iam_role" "ecs-host-role" {
  name               = "ecs_host_role-${var.environment}"
  assume_role_policy = file("${path.module}/policies/ecs-role.json")
}

resource "aws_iam_role_policy" "ecs-instance-role-policy" {
  name   = "ecs_instance_role_policy-${var.environment}"
  policy = file("${path.module}/policies/ecs-instance-role-policy.json")
  role   = aws_iam_role.ecs-host-role.id
}

resource "aws_iam_role" "ecs-service-role" {
  name               = "ecs_service_role-${var.environment}"
  assume_role_policy = file("${path.module}/policies/ecs-role.json")
}

resource "aws_iam_role_policy" "ecs-service-role-policy" {
  name   = "ecs_service_role_policy-${var.environment}"
  policy = file("${path.module}/policies/ecs-service-role-policy.json")
  role   = aws_iam_role.ecs-service-role.id
}

resource "aws_iam_instance_profile" "ecs" {
  name = "ecs_instance-${var.environment}"
  path = "/"
  role = aws_iam_role.ecs-host-role.name
}

resource "aws_ecs_service" "api" {
  name            = "${var.service_name}-${var.environment}"
  cluster         = aws_ecs_cluster.ecs_cluster.id
  task_definition = aws_ecs_task_definition.task_definition.arn
  desired_count   = var.desired_containers

  iam_role        = aws_iam_role.ecs-service-role.arn
  depends_on      = [
    aws_alb_listener.https_listener, 
    aws_iam_role_policy.ecs-service-role-policy]

  load_balancer {
    target_group_arn = aws_alb_target_group.default-tg.arn
    container_name   = "api"
    container_port   = 3000
  }
}
